css/main.css
/* ==========================================================================
   [Table of contents]

   1. BASE
      1.1 Page Rendering
      1.2 Core Styling
      1.3 Typography
  2. LAYOUT
      2.1 Core Layout
      2.2 Small Only
      2.3 Medium and up
      2.4 Medium Only
      2.5 Large Screens and up
      2.6 Large only
  3. MODULES
  4. STATES
  5. THEME
      1.1 Footer
  6. UTILITY CLASSES
  7. PRINT



 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.

   ========================================================================== */



/* ==========================================================================
    1. BASE
   ========================================================================== */


/* 1.1 Page Rendering Default */

   html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}



::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* 1.2 Core Styling */

/* div,
main,
section,
footer,
header {
	outline: 1px solid #ccc;
	min-height: 1rem;
  padding: 1rem;
} */

*,
*:before,
*:after {
	box-sizing: border-box;
}

img {
	width: 100%;
}

/* 1.3 Typography */

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: Ubuntu, sans-serif;
	font-weight: 300;
  text-align: center;
}

p {
	font-family: 'Open-Sans', Arial;
}


/* ==========================================================================
   2. LAYOUT
   ========================================================================== */


/* 2.1 Core layout */

.row {
	display: grid;
	row-gap: 1rem;
  align-items: center;
}

.col {
	position: relative;
	background-color: rgb(242, 230, 177);

}

.logo {
  max-height: 5rem;
  object-fit: cover;
}

/* main nav mobile first */
.main-nav {
  display: none;
  flex-direction: column;
  align-items: center;
}

.main-nav__item {
  display: block;
  position: relative;
  width: 100%;
  padding: 1rem 1rem 1rem;
  font-size: 1.3rem;
  text-decoration: none;
  text-align: left;
  color: white;
  line-height: 4rem;
  background-repeat: no-repeat;
  background-position-x: 44%;
  background-position-y: center;
  background-size: 3.1rem, 1.7rem;
}

.main-nav__item::after {
  content: ">";
  display: inline-block;
  position: absolute;
  right: 1rem;
}

.main-nav__item.active::after {
  content: "";
}


/* 2.2 Small Only */

@media screen and (max-width: 39.9375em) {
    .s-hide {
    display: none;
    }
    .s-col-2 {
      grid-template-columns: 1fr 1fr;
    }
    .s-col-5 {
      grid-template-columns: repeat(5, 1fr);
    }
    .s-col-span-5 {
      grid-template-columns: 1fr 5fr;
    }
    .s-col-span-2 {
      grid-template-columns: 1fr 2fr;
    }
    .grid {
      display: grid;
      column-gap: 0.5rem;
      row-gap: 0.5rem;
    }
    .m-col-6 {
      max-height: 3rem;
    }
    .s-show {
      display: flex;
    }
    .row {
      max-width: 40rem;
      column-gap: 1.5rem;
      row-gap: 1.5rem;
      margin: 0 auto 1rem;
    }
    .logo {
      max-height: 3rem;
      position: static;

    }
    .column {
      margin-right: 8rem;
    }
      .main-nav__item::after {
      display: inline-block;
      position: static;
      padding-left: 1rem;
    }
    .mobile-nav {
      position: absolute;
      right: 0rem;
      top: 0.5rem;
      z-index: 1;
      font-size: 0rem;
      padding: 2.5rem;
      background-image: url(../icons/bars-solid.svg);
      background-repeat: no-repeat;
      background-size: 1.8rem;
      background-position: center center;
      background-color: #2a6eeb;
  }
}

/* 2.3 Medium and up */

@media screen and (min-width: 40em) {
    .row {
      max-width: 70rem;
      column-gap: 1.5rem;
      row-gap: 1.5rem;
      margin: 0 auto;
    }
   
    .row-span {
      grid-column-start: 1;
      grid-column-end: -1;
    }

    .m-col-2 {
      grid-template-columns: 1fr 1fr;
    }
    .m-col-3 {
      grid-template-columns: repeat(3, 1fr);
    }

    .m-1-2 {
      grid-template-columns: 1fr 2fr;
    }
    .m-col-span-5 {
      grid-template-columns: 1fr 5fr;
    }
    .m-col-8 {
      grid-template-columns: repeat(8, 1fr);
    }
    .m-col-span5-1 {
      grid-template-columns: 5fr 1fr;
    }
    .m-col-span-6 {
      grid-template-columns: 1fr 6fr;
    }
    .mobile-nav {
      display: none;
    }
    .logo {
      margin-top: 1rem;
    }
    .main-nav {
      display: flex;
      flex-direction: row;
    }
    .main-nav__item {
      padding: 4rem 1rem 0rem 0.5rem;
      line-height: 2rem;
      font-size: 0.8rem;
      text-align: left;
      background-color: rgb(184, 184, 184);
      background-position-x: center;
      background-position-y: center;
      background-size: 2.3rem, 1.4rem;
    }
}

/* 2.4 Medium only */ 

@media screen and (min-width: 40em) and
(max-width: 63.9375em) {

  .m-hide {
    display: none;
  }
  .m-1-2 {
    grid-template-columns: 1fr 2fr;
  }
  .logo {
     padding-top: 1rem;
   }
}
/* ... */

